--- a/SimpleTaskSystem/SimpleTaskSystem.WebSpaAngular/App/Main/views/layout/layout.cshtml
+++ b/SimpleTaskSystem/SimpleTaskSystem.WebSpaAngular/App/Main/views/layout/layout.cshtml
@@ -43,7 +43,7 @@
 <body>
     <div ng-app="app">
         <div ng-controller="app.views.layout as vm">
-            <div ng-include="'/App/Main/views/layout/header.cshtml'"></div>
+            @*<div ng-include="'/App/Main/views/layout/header.cshtml'"></div>*@
             <div class="container">
                 <div class="angular-animation-container row">
                     <div ui-view class="shuffle-animation col-xs-12"></div>
